--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -1,4 +1,5 @@
-\begin{abstract}
+\centering \textbf{Abstract}
+
     In camera pre-calibration, images of a calibration object are commonly 
     used to determine the internal geometry of a camera.
     The calibration imaging is often optimized to have the calibration object 
@@ -10,7 +11,7 @@
     An area-based re-weighting scheme is suggested to improve the calibration.
     Additionally, the effect of a choice between a 2D and a 3D calibration
     object is investigated.
-
+    
     A simulation study was performed where both a standard and area-weighted
     pre-calibration scheme was used in a parallel and a convergent scene.
     The estimated uncertainty and true errors were computed
@@ -20,4 +21,3 @@
     However, for the standard and area-based calibrations, the true errors
     surpassed the estimated uncertainties by up to
     26 and 58 percent, respectively.
-\end{abstract}
