maths and disc point

--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -23,9 +23,8 @@
 \clearpage
 \section{Results}
 \clearpage
-\section{Discussion}
     \label{sec:discussion}
- %   \input{discussion}
+    \input{discussion}
 \clearpage
 \section{Acknowledgments}
     \label{sec:acknowledgments}
