--- a/docs/evaluation.tex
+++ b/docs/evaluation.tex
@@ -1,4 +1,15 @@
-\section{Evaluation}
+\chapter{Evaluation}
+
+With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
+
+\section{Topology}
+
+Network topology
+
+\[ P(k) \propto k^{-\gamma} \]
+
+\[ p_i = \dfrac{k_i}{\sum_{j}^{}k_j}  \]
+
 
 Lightning network consists of nodes playing game
 
