--- a/docs/main.tex
+++ b/docs/main.tex
@@ -191,9 +191,8 @@
 	\clearpage
 	\section{Results}
 	\clearpage
-	\section{Discussion}
 	\label{sec:discussion}
-	%   \input{discussion}
+    \input{discussion}
 	\clearpage
 	\section{Acknowledgments}
 	\label{sec:acknowledgments}
