new set up on consensus

--- a/docs/macroeconomics.tex
+++ b/docs/macroeconomics.tex
@@ -127,7 +127,7 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 
 \twocolumn
 
-\begin{table*}[!htb]
+\begin{table}[!htb]
 	\begin{tabular}{llllll}
 		Nation & Currency & Period & Highest monthly Inf. & Avg. daily Inf. & Type of index\\
 		Hungary & Pengő & Aug. 1945 - Jul. 1946 & $ 4.19 × 10^{16}\% $ & 207\% & Consumer \\
