--- a/docs/main.tex
+++ b/docs/main.tex
@@ -3,7 +3,7 @@
 \setlength{\columnsep}{.03\textwidth}
 
 \usepackage{UmUThesis}
-\usepackage{subcaption}
+%\usepackage{subcaption}
 \usepackage{color}
 \usepackage{marginnote}
 \usepackage{natbib}
