--- a/docs/bitcoin.tex
+++ b/docs/bitcoin.tex
@@ -21,9 +21,9 @@ Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole 
 
 \section{The Double-Spending problem}
 
-While digital signatures are able prove ownership of bitcoin. There is nothing to stop the owner of an amount of bitcoin to sign multiple transactions spending the same transaction output. This is called the double-spending problem which is a variation of the more general Byzantine's General Problem.
+While digital signatures are able prove ownership of bitcoin. There is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the double-spending problem which is a variation of the more general Byzantine's General Problem. The network reaches a coherent global view over the  transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of Hashcash as it uses a hash-based cost function which requires a selected amound of work and the proof of the work being cheap to verify.
 
-Bitcoin solves this by using a data structure composite of a chain of blocks as seen in figure \ref{fig:blockchain}.
+The \textit{Proof-of-work} algoithm is directly tied into the bitcoin transaction history data structure composite of a chain of blocks as seen in figure \ref{fig:blockchain}.
 
 \begin{figure}[!htb]
 	\hspace*{-2cm} 
@@ -34,6 +34,10 @@ Bitcoin solves this by using a data structure composite of a chain of blocks as 
 	\label{fig:blockchain}
 	\hspace{2mm} 
 \end{figure}
+
+The work in the algorithm is to find a sufficiently small hash of the previous block's header. A hash is valid if it's smaller than a number imposted by a difficulty target. There is no way to reverse engineer a sufficient hash and the algorithm repeatedly hashes the block header, changing the nonce, until a hash is found. The network consensus
+
+The blocks are in a sense chained through these hashed headers and each additional block adds cumulative work on the blocks under them
 
 The blocks are chained through the hash of the previous block's header. A block is only valid if the hash is lower than an number imposed by the difficulty target. The hash is deterministic but for all intents and purposes it is random and to find a valid hash one simply hashes the header until a valid hash is found. This process is known as \textbf{mining}. The difficulty target adjusts every 2015th\footnote{This is off by one bug, 2016 blocks is two weeks} block\cite{repository:bitcoin} and forces the average time for a block to be mined to always be ten minutes. This sort of design is known as \textit{Proof-of-Work} and bitcoin differentiate from previous implementations with the difficulty adjustment\cite{back:hashcash}\footnote{Bitcoin uses the dubble \texttt{SHA256} hash, it is essentially the same as hashcash in the cost function being non-interactive, publicly auditable, trapdoor-free and unbounded probabilistic cost\cite{back:hashcash}.}.
 
